Finalizando estrutura da seção header no index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300;1,400;1,700;1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
-</body>
-</html>
+<header class="header">
+    <div class="header--container container-1">
+        <a href="index.html" class="header__link"><img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="header__logo"></a>
+        <nav class="header__nav">
+            <ul class="header__list">
+                <li class="header__item"><a href="#" class="header__link">Bicicletas</a></li>
+                <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
+                <li class="header__item"><a href="#" class="header__link">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
