Finalizando a estrutura da seção introdution em index.html

--- a/index.html
+++ b/index.html
@@ -12,15 +12,32 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-<header class="header">
-    <div class="header--container container-1">
-        <a href="index.html" class="header__link"><img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="header__logo"></a>
-        <nav class="header__nav">
-            <ul class="header__list">
-                <li class="header__item"><a href="#" class="header__link">Bicicletas</a></li>
-                <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
-                <li class="header__item"><a href="#" class="header__link">Contato</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <header class="header">
+        <div class="header--container container-1">
+            <a href="index.html" class="header__link"><img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="header__logo"></a>
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__item"><a href="#" class="header__link">Bicicletas</a></li>
+                    <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
+                    <li class="header__item"><a href="#" class="header__link">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <article class="introdution">
+            <div class="introdution--container container-1">
+                <div class="introdution--container--content">
+                    <h1 class="introdution__title title">Bicicletas feitas sob medida<span class="introdution__dot dot">.</span></h1>
+                    <h2 class="introdution__subtitle subtitle">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</h2>
+                    <a href="#" class="introdution__button button">Selecione a sua</a>
+                </div>
+                <div class="introdution--container--img">
+                    <img src="./assets/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta" class="introdution__img image">
+                </div>
+            </div>
+        </article>
+
+    </main>
+</body>
+</html>
