Finalizando estrutura da seção choose em index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,28 @@
                 </div>
             </div>
         </article>
-
+        <article class="choose">
+            <div class="choose choose--container container-2">
+                <h1 class="choose__title title title-2">escolha a sua<span class="choose__dot dot">.</span></h1>
+                <ul class="choose__list">
+                    <li class="choose__item">
+                        <img src="./assets/img/bicicletas/magic-home.jpg" alt="Bicicleta preta Magic" class="choose__img--bicycle image">
+                        <p class="choose--bicycle__name">Magic Might</p>
+                        <span class="choose--bicycle__price">R$ 2499</span>
+                    </li>
+                    <li class="choose__item">
+                        <img src="./assets/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta Nimbus" class="choose__img--bicycle image">
+                        <p class="choose--bicycle__name">Nimbus Stark</p>
+                        <span class="choose--bicycle__price">R$ 4999</span>
+                    </li>
+                    <li class="choose__item">
+                        <img src="./assets/img/bicicletas/nebula-home.jpg" alt="Bicicleta branca Nebula" class="choose__img--bicycle image">
+                        <p class="choose--bicycle__name">Nebula Cosmic</p>
+                        <span class="choose--bicycle__price">R$ 3999</span>
+                    </li>
+                </ul>
+            </div>
+        </article>
     </main>
 </body>
 </html>
