Finalizando estrutura da seção technology em index.html

--- a/index.html
+++ b/index.html
@@ -59,6 +59,33 @@
                 </ul>
             </div>
         </article>
+        <article class="technology">
+            <div class="technology--container container-1">
+                <div class="technology--container--content">
+                    <span class="technology--section__title">Tecnologia Avançada</span>
+                    <h1 class="technology__title title">você escolhe as suas cores e componentes<span class="technology__dot dot">.</span></h1>
+                    <h2 class="technology__subtitle subtitle">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</h2>
+                    <a href="#" class="technology__link">Escolha um modelo</a>
+                    <div class="technology--container--benefits">
+                        <ul class="technology__list">
+                            <li class="technology__item">
+                                <i class="technology__icon icon icon--bike"></i>
+                                <p class="technology__benefit">Motor Elétrico</p>
+                                <p class="technology--benefit__description">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                            </li>
+                            <li class="technology__item">
+                                <i class="technology__icon icon icon--tracker"></i>
+                                <p class="technology__benefit">Rastreador</p>
+                                <p class="technology--benefit__description">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="technology--container--img">
+                    <img src="./assets/img/fotos/tecnologia.jpg" alt="Ferramentas" class="technology__img image">
+                </div>
+            </div>    
+        </article>
     </main>
 </body>
 </html>
