Finalizando estrutura da seção partners em index.html

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
                 </div>
             </div>    
         </article>
+        <section class="partners">
+            <div class="partners--container container-2">
+                <h1 class="partners__title title title-2">nossos parceiros<span class="partners__dot dot">.</span></h1>
+                <ul class="partners__list">
+                    <li class="partners__item"><img src="./assets/img/parceiros/caravan.svg" alt="Logo da Caravan" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/ranek.svg" alt="Logo da Ranek" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/handel.svg" alt="Logo da Handel" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/dogs.svg" alt="Logo da Dogs" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/lescone.svg" alt="Logo da Lescone" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/flexblog.svg" alt="Logo da Flexbox" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/wildbeast.svg" alt="Logo da Wildbeast" class="partners__logo"></li>
+                    <li class="partners__item"><img src="./assets/img/parceiros/surfbot.svg" alt="Logo da Surfbot" class="partners__logo"></li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
