Finalizando estrutura da seção review em html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,17 @@
                 </ul>
             </div>
         </section>
+        <section class="review">
+            <div class="review--container">
+                <div class="review--container--image">
+                    <img src="./assets/img/fotos/depoimento.jpg" alt="Mulher em uma bicicleta" class="review__img image">
+                </div>
+                <div class="review--container--content">
+                    <p class="review__depoiment">"Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo."</p>
+                    <span class="review__name">Ana Júlia</span>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
