Finalizando estrutura da seção insurance em index.html

--- a/index.html
+++ b/index.html
@@ -112,6 +112,49 @@
                 </div>
             </div>
         </section>
+        <section class="insurance">
+            <div class="insurance--container container-1">
+                <div class="insurance--container--title">
+                    <h1 class="insurance__title title">seguros<span class="insurance__dot dot">.</span></h1>
+                </div>
+                <div class="insurance--container--content">
+                    <div class="insurance--container--plan">
+                        <div class="insurance--container--benefit">
+                            <h2 class="insurance__plan insurance__plan--silver">Prata</h2>
+                            <ul class="insurance__list">
+                                <li class="insurance__item">Duas trocas por ano</li>
+                                <li class="insurance__item">Assistência técnica</li>
+                                <li class="insurance__item">Suporte 08h às 18h</li>
+                                <li class="insurance__item">Cobertura estadual</li>
+                            </ul>
+                            <a href="#" class="insurance__button insurance__button--silver button">Inscreva-se</a>
+                        </div>
+                        <div class="insurance--container--price">
+                            <span class="insurance__price">R$ 199</span>
+                            <span class="insurance__peridiocity">mensal</span>
+                        </div>
+                    </div>
+                    <div class="insurance--container--plan">
+                        <div class="insurance--container--benefit">
+                            <h2 class="insurance__plan insurance__plan--gold">Ouro</h2>
+                            <ul class="insurance__list">
+                                <li class="insurance__item">Cinco trocas por ano</li>
+                                <li class="insurance__item">Assistência especial</li>
+                                <li class="insurance__item">Suporte 24h</li>
+                                <li class="insurance__item">Cobertura nacional</li>
+                                <li class="insurance__item">Desconto em parceiros</li>
+                                <li class="insurance__item">Acesso ao Clube Bikcraft</li>
+                            </ul>
+                            <a href="#" class="insurance__button insurance__button--gold button">Inscreva-se</a>
+                        </div>
+                        <div class="insurance--container--price">
+                            <span class="insurance__price">R$ 299</span>
+                            <span class="insurance__peridiocity">mensal</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
