Finalizando estrutura da seção footer.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header class="header">
+<header class="header">
         <div class="header--container container-1">
             <a href="index.html" class="header__link"><img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="header__logo"></a>
             <nav class="header__nav">
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+</header>
 <main class="main">
     <article class="introdution">
         <div class="introdution--container container-1">
@@ -156,5 +156,40 @@
         </div>
     </section>
 </main>
+<footer class="footer">
+    <div class="footer--container container-1">
+        <div class="footer--container--image">
+            <img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="footer__logo">
+        </div>
+        <div class="footer--container--contact">
+            <h1 class="footer__title">Contato</h1>
+            <div class="footer--container--number">
+                <p class="footer__number">+55 21 99999-9999</p>
+                <p class="footer__email">contato@bikcraft.com</p>
+            </div>
+            <div class="footer--container--address">
+                <address class="footer__address">Rua Ali Longe, 42 - Bonsucesso</address>
+                <p class="footer__city">Rio de Janeiro - RJ</p>
+            </div>
+            <div class="footer--container--socials">
+                <i class="footer__icon icon icon--instagram"></i>
+                <i class="footer__icon icon icon--facebook"></i>
+                <i class="footer__icon icon icon--youtube"></i>
+            </div>
+        </div>
+        <div class="footer--container--information">
+            <h1 class="footer__title">Informações</h1>
+            <nav class="footer__nav">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">Bicicletas</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Seguros</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contato</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Termos e Condições</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <p class="footer__rigths container-1">Bikcraft &copy; Todos os direitos reservados.</p>
+</footer>
 </body>
 </html>
