Finalizando estrutura da seção bicycles em bicycles.html

--- a/bicycles.html
+++ b/bicycles.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/utility.css">
     <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css//bicycles/introdution.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
@@ -32,9 +33,106 @@
     <section class="introdution">
         <div class="introdution--container container-1">
             <p class="introdution__text">Escolha a melhor para você</p>
-            <h1 class="introdution__title title">ossas bicicletas<span class="introdution__dot dot">.</span></h1>
+            <h1 class="introdution__title title">nossas bicicletas<span class="introdution__dot dot">.</span></h1>
         </div>
     </section>
+    <article class="bicycles">
+
+        <div class="bicycles--container container-1">
+            <div class="bicycles--container--nimbus bicycles--container--card">
+                <div class="bicycles--container--image">
+                    <img src="./assets/img/bicicletas/nimbus.jpg" alt="Bicicleta Nimbus" class="bicycles__img">
+                </div>
+                <div class="bicycles--container--content">
+                    <h2 class="bicycles__name">Nimbus Stark</h2>
+                    <p class="bicycles__description">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <div class="bicycles--container--benefits">
+                        <ul class="bicycles__list">
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--bike"></i>
+                                <p class="bicycles__benefit">Motor Elétrico</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--carbon"></i>
+                                <p class="bicycles__benefit">Fibra de Carbono</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--speedometer"></i>
+                                <p class="bicycles__benefit">40 Km/h</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--tracker"></i>
+                                <p class="bicycles__benefit">Rastreador</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="bicycles__button button">Mais Sobre</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bicycles--container--magic bicycles--container--card">
+                <div class="bicycles--container--image">
+                    <img src="./assets/img/bicicletas/magic.jpg" alt="Bicicleta Nimbus" class="bicycles__img">
+                </div>
+                <div class="bicycles--container--content">
+                    <h2 class="bicycles__name">Magic Might</h2>
+                    <p class="bicycles__description">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <div class="bicycles--container--benefits">
+                        <ul class="bicycles__list">
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--bike"></i>
+                                <p class="bicycles__benefit">Motor Elétrico</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--carbon"></i>
+                                <p class="bicycles__benefit">Fibra de Carbono</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--speedometer"></i>
+                                <p class="bicycles__benefit">40 Km/h</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--tracker"></i>
+                                <p class="bicycles__benefit">Rastreador</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="bicycles__button button">Mais Sobre</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bicycles--container--nebula bicycles--container--card">
+                <div class="bicycles--container--image">
+                    <img src="./assets/img/bicicletas/nebula.jpg" alt="Bicicleta Nimbus" class="bicycles__img">
+                </div>
+                <div class="bicycles--container--content">
+                    <h2 class="bicycles__name">Nebula Cosmic</h2>
+                    <p class="bicycles__description">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                    <div class="bicycles--container--benefits">
+                        <ul class="bicycles__list">
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--bike"></i>
+                                <p class="bicycles__benefit">Motor Elétrico</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--carbon"></i>
+                                <p class="bicycles__benefit">Fibra de Carbono</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--speedometer"></i>
+                                <p class="bicycles__benefit">40 Km/h</p>
+                            </li>
+                            <li class="bicycles__item">
+                                <i class="bicycles__icon icon icon--tracker"></i>
+                                <p class="bicycles__benefit">Rastreador</p>
+                            </li>
+                        </ul>
+                        <a href="#" class="bicycles__button button">Mais Sobre</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
 </main>
 
 <footer class="footer">
