--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="index.html" class="header__link"><img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="header__logo"></a>
             <nav class="header__nav">
                 <ul class="header__list">
-                    <li class="header__item"><a href="#" class="header__link">Bicicletas</a></li>
+                    <li class="header__item"><a href="bicycles.html" class="header__link">Bicicletas</a></li>
                     <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
                     <li class="header__item"><a href="#" class="header__link">Contato</a></li>
                 </ul>
