Finalizando estrutura da seção select em buy.html

--- a/buy.html
+++ b/buy.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/buy/choose.css">
+    <link rel="stylesheet" href="./assets/css/buy/select.css">
     
 </head>
 <body>
@@ -116,7 +117,24 @@
             </div>
         </div>
     </article>
-    
+
+    <article class="select">
+        <div class="select--container container-1">
+            <h1 class="select__title title">escolha a sua<span class="select__dot dot">.</span></h1>
+            <ul class="select__list">
+                <li class="select__item">
+                    <img src="./assets/img/bicicletas/magic.jpg" alt="Bicicleta preta Magic" class="select__img image">
+                    <p class="select--bicycle__name">Magic Might</p>
+                    <span class="select--bicycle__price">R$ 2499</span>
+                </li>
+                <li class="select__item">
+                    <img src="./assets/img/bicicletas/nebula.jpg" alt="Bicicleta branca Nebula" class="select__img image">
+                    <p class="select--bicycle__name">Nebula Cosmic</p>
+                    <span class="select--bicycle__price">R$ 3999</span>
+                </li>
+            </ul>
+        </div>
+    </article>
 </main>
 
 <footer class="footer">
