Finalizando a estrutura da seção insurance em buy.html

--- a/buy.html
+++ b/buy.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/buy/choose.css">
     <link rel="stylesheet" href="./assets/css/buy/select.css">
+    <link rel="stylesheet" href="./assets/css/buy/insurance.css">
     
 </head>
 <body>
@@ -133,6 +134,19 @@
                     <span class="select--bicycle__price">R$ 3999</span>
                 </li>
             </ul>
+        </div>
+    </article>
+
+    <article class="insurance">
+        <div class="insurance--container container-2">
+            <section class="insurance--container--image">
+                <img src="./assets/img/fotos/seguros.jpg" alt="Bicicleta Nimbus" class="insurance__img image">
+            </section>
+            <section class="insurance--container--content">
+                <h1 class="insurance__title title">Pedale mais tranquilo com o nosso <span class="insurance__emphasis">seguro.</span></h1>
+                <p class="insurance__description">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+                <a href="#" class="insurance__button button">Conheça Mais</a>
+            </section>
         </div>
     </article>
 </main>
