Linkando as diferentes páginas do projeto

--- a/buy.html
+++ b/buy.html
@@ -25,8 +25,8 @@
         <nav class="header__nav">
             <ul class="header__list">
                 <li class="header__item"><a href="bicycles.html" class="header__link">Bicicletas</a></li>
-                <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
-                <li class="header__item"><a href="#" class="header__link">Contato</a></li>
+                <li class="header__item"><a href="insurance.html" class="header__link">Seguros</a></li>
+                <li class="header__item"><a href="contact.html" class="header__link">Contato</a></li>
             </ul>
         </nav>
     </div>
@@ -145,7 +145,7 @@
             <section class="insurance--container--content">
                 <h1 class="insurance__title title">Pedale mais tranquilo com o nosso <span class="insurance__emphasis">seguro.</span></h1>
                 <p class="insurance__description">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
-                <a href="#" class="insurance__button button">Conheça Mais</a>
+                <a href="insurance.html" class="insurance__button button">Conheça Mais</a>
             </section>
         </div>
     </article>
