--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__item"><a href="bicycles.html" class="header__link">Bicicletas</a></li>
-                    <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
-                    <li class="header__item"><a href="#" class="header__link">Contato</a></li>
+                    <li class="header__item"><a href="insurance.html" class="header__link">Seguros</a></li>
+                    <li class="header__item"><a href="contact.html" class="header__link">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,19 +42,25 @@
             <h1 class="choose__title title title-2">escolha a sua<span class="choose__dot dot">.</span></h1>
             <ul class="choose__list">
                 <li class="choose__item">
-                    <img src="./assets/img/bicicletas/magic-home.jpg" alt="Bicicleta preta Magic" class="choose__img--bicycle image">
-                    <p class="choose--bicycle__name">Magic Might</p>
-                    <span class="choose--bicycle__price">R$ 2499</span>
+                    <a href="buy.html" class="choose__link">
+                        <img src="./assets/img/bicicletas/magic-home.jpg" alt="Bicicleta preta Magic" class="choose__img--bicycle image">
+                        <p class="choose--bicycle__name">Magic Might</p>
+                        <span class="choose--bicycle__price">R$ 2499</span>
+                    </a>
                 </li>
                 <li class="choose__item">
+                    <a href="buy.html" class="choose__link">
                     <img src="./assets/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta Nimbus" class="choose__img--bicycle image">
                     <p class="choose--bicycle__name">Nimbus Stark</p>
                     <span class="choose--bicycle__price">R$ 4999</span>
+                    </a>
                 </li>
                 <li class="choose__item">
+                    <a href="buy.html" class="choose__link">
                     <img src="./assets/img/bicicletas/nebula-home.jpg" alt="Bicicleta branca Nebula" class="choose__img--bicycle image">
                     <p class="choose--bicycle__name">Nebula Cosmic</p>
                     <span class="choose--bicycle__price">R$ 3999</span>
+                    </a>
                 </li>
             </ul>
         </div>
@@ -65,7 +71,7 @@
                 <span class="technology--section__title">Tecnologia Avançada</span>
                 <h1 class="technology__title title">você escolhe as suas cores e componentes<span class="technology__dot dot">.</span></h1>
                 <h2 class="technology__subtitle subtitle">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</h2>
-                <a href="#" class="technology__link">Escolha um modelo</a>
+                <a href="bicycles.html" class="technology__link">Escolha um modelo</a>
                 <div class="technology--container--benefits">
                     <ul class="technology__list">
                         <li class="technology__item">
@@ -127,7 +133,7 @@
                             <li class="insurance__item">Suporte 08h às 18h</li>
                             <li class="insurance__item">Cobertura estadual</li>
                         </ul>
-                        <a href="#" class="insurance__button insurance__button--silver button">Inscreva-se</a>
+                        <a href="insurance.html" class="insurance__button insurance__button--silver button">Inscreva-se</a>
                     </div>
                     <div class="insurance--container--price">
                         <span class="insurance__price">R$ 199</span>
@@ -145,7 +151,7 @@
                             <li class="insurance__item">Desconto em parceiros</li>
                             <li class="insurance__item">Acesso ao Clube Bikcraft</li>
                         </ul>
-                        <a href="#" class="insurance__button insurance__button--gold button">Inscreva-se</a>
+                        <a href="insurance.html" class="insurance__button insurance__button--gold button">Inscreva-se</a>
                     </div>
                     <div class="insurance--container--price">
                         <span class="insurance__price">R$ 299</span>
