--- a/bicycles.html
+++ b/bicycles.html
@@ -22,9 +22,9 @@
         <a href="index.html" class="header__link"><img src="./assets/img/icones/bikcraft.svg" alt="Logo da Bikcraft" class="header__logo"></a>
         <nav class="header__nav">
             <ul class="header__list">
-                <li class="header__item"><a href="#" class="header__link">Bicicletas</a></li>
-                <li class="header__item"><a href="#" class="header__link">Seguros</a></li>
-                <li class="header__item"><a href="#" class="header__link">Contato</a></li>
+                <li class="header__item"><a href="bicycles.html" class="header__link">Bicicletas</a></li>
+                <li class="header__item"><a href="insurance.html" class="header__link">Seguros</a></li>
+                <li class="header__item"><a href="contact.html" class="header__link">Contato</a></li>
             </ul>
         </nav>
     </div>
@@ -68,7 +68,7 @@
                                 <p class="bicycles__benefit">Rastreador</p>
                             </li>
                         </ul>
-                        <a href="#" class="bicycles__button button">Mais Sobre</a>
+                        <a href="buy.html" class="bicycles__button button">Mais Sobre</a>
                     </div>
                 </div>
             </section>
@@ -100,7 +100,7 @@
                                 <p class="bicycles__benefit">Rastreador</p>
                             </li>
                         </ul>
-                        <a href="#" class="bicycles__button button">Mais Sobre</a>
+                        <a href="buy.html" class="bicycles__button button">Mais Sobre</a>
                     </div>
                 </div>
             </section>
@@ -133,7 +133,7 @@
                                 <p class="bicycles__benefit">Rastreador</p>
                             </li>
                         </ul>
-                        <a href="#" class="bicycles__button button">Mais Sobre</a>
+                        <a href="buy.html" class="bicycles__button button">Mais Sobre</a>
                     </div>
                 </div>
             </section>
